# gakujo-gpts-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  gpt-config.md  main.py  pyproject.toml
app/: client.py  config.py  load_control.py  models.py  oauth.py  routes.py  scraper.py  security.py
deploy/: cloudrun-service.yaml
tests/: chat_with_gakujo.py  test_all.py  test_security.py
